force-app/main/default/objects/External_Product__c/External_Product__c.object-meta.xml
<CustomObject>
    <description>Staging inbox for external products fetched from the Platzi Fake Store API. Records land here first and are later published as Product2 in the LvlUp Wholesale Commerce store. Does not affect the existing internal catalog.</description>
    <label>External Product</label>
    <nameField>
        <displayFormat>EP-{00000}</displayFormat>
        <label>External Product Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>