force-app/main/default/objects/External_Product__c/fields/External_Category_Name__c.field-meta.xml
<CustomField>
    <fullName>External_Category_Name__c</fullName>
    <description>Category name as received from the external source (e.g. the Platzi category). Used to map the product to a Commerce category on publish.</description>
    <label>External Category Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>