force-app/main/default/objects/External_Product__c/fields/External_Description__c.field-meta.xml
<CustomField>
    <fullName>External_Description__c</fullName>
    <description>Long product description as received from the external source.</description>
    <label>External Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>