force-app/main/default/objects/External_Product__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>Unique identifier of the product in the source system (e.g. Platzi product id). Used as the upsert key when importing, to avoid duplicates.</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>