force-app/main/default/objects/External_Product__c/fields/External_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>External_Image_URL__c</fullName>
    <description>Primary product image URL from the external source. Maps to Product2.DisplayUrl on publish.</description>
    <label>External Image URL</label>
    <type>Url</type>
</CustomField>