force-app/main/default/objects/External_Product__c/fields/External_Price__c.field-meta.xml
<CustomField>
    <fullName>External_Price__c</fullName>
    <description>List price as received from the external source. Used to seed the PricebookEntry on publish.</description>
    <label>External Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>