force-app/main/default/objects/External_Product__c/fields/External_Source__c.field-meta.xml
<CustomField>
    <fullName>External_Source__c</fullName>
    <description>Name of the originating system or manufacturer feed, e.g. &quot;Platzi&quot;.</description>
    <label>External Source</label>
    <length>80</length>
    <type>Text</type>
</CustomField>