force-app/main/default/objects/External_Product__c/fields/External_Title__c.field-meta.xml
<CustomField>
    <fullName>External_Title__c</fullName>
    <description>Product title as received from the external source. Maps to Product2.Name on publish.</description>
    <label>External Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>