force-app/main/default/objects/External_Product__c/fields/Last_Error__c.field-meta.xml
<CustomField>
    <fullName>Last_Error__c</fullName>
    <description>Last error message captured during import or publish, for troubleshooting failed records.</description>
    <label>Last Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>