force-app/main/default/objects/External_Product__c/fields/Last_Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync_Date__c</fullName>
    <description>Timestamp of the last successful or attempted synchronization for this record.</description>
    <label>Last Sync Date</label>
    <type>DateTime</type>
</CustomField>