force-app/main/default/objects/External_Product__c/fields/Salesforce_Product__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Product2 created when this staging record is published to Commerce. Populated by the future publish step (External_Product__c.Salesforce_Product__c = Product2.Id).</description>
    <label>Salesforce Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>External Products</relationshipLabel>
    <relationshipName>External_Products</relationshipName>
    <type>Lookup</type>
</CustomField>